--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
         <h1>Adithya Varaprasad Muppalla</h1>
         <h3>Bapu Museum</h3>
         <p>The main attractions of the musuem are the <b>Sculpture Garden</b> and <b>The Antiquity Spot</b> The museum displays the artistic grandeur of our country and exhibits within a four-walled area the glistening evidence of our cultural history, and that’s why we need to behold the scenic beauty of this place at least once in a lifetime.</p>
+<hr>
+        <h3>Road map from Gannavaram Airport to Bapu Musuem</h3>
+        <ol>
+            <li>After coming out of the airport head towards south onto NH16</li>
+            <li>Travel on NH16 for 10 km</li>
+            <li>At ramavarapadu junction take right onto eluru road</li>
+            <li>Travel straight on elurqu road for 7 km</li>
+            <li>Then take left onto prakasam road</li>
+            <li>After 400 meters take another left</li>
+            <li>The destination is on your right</li>
+        </ol>
+        <h3>other locations around the musuem</h3>
+        <ul>
+            <li>Bhavani Island</li>
+            <li>Kanaka Durgamma Varadhi</li>
+            <li>Undavalli caves</li>
+            <li>Prakasam Barage</li>
+            <li>Rahavayya Park</li>
+            <li>Moghalrajpuram caves</li>
+        </ul>
     </body>
 
 </html>
