--- a/index.html
+++ b/index.html
@@ -28,6 +28,40 @@
             <li>Moghalrajpuram caves</li>
         </ul>
         <a href=aboutme.html>This is about my Favourite movie</a>
+        <hr>
+        <h3>Best places to visit in vijayawada</h3>
+<p>The table below lists famous places in various cities throughout the United Kingdom, as well as the time required to visit those locations.</p>
+<table>
+    <tr>
+        <th>City Name</th>
+        <th>Location</th>
+        <th>Time Taken</th>
+    </tr>
+    <tr>
+        <td>vijayawada</td>
+        <td>Ramgopal Theatre</td>
+        <td>45mins</td>
+    </tr>
+    <tr>
+        <td>Mangalagiri</td>
+        <td>Bhavani Islands</td>
+        <td>55mins</td>
+    </tr>
+    <tr>
+
+       <td> KVSS</td>
+       	<td>Gunadala</td>
+        <td>45mins</td>
+    </tr>
+    <tr>
+        <td>PVPSIT</td>
+        <td>Kanuru</td>
+        <td>50mins</td>
+    </tr>
+
+</table>
+
+
     </body>
 
 </html>
