--- a/index.html
+++ b/index.html
@@ -69,18 +69,15 @@
 <h1>Trick</h1>
 <blockquote>Why does UITextField lock up when setting itself to delegate</blockquote>
 <a href="https://stackoverflow.com/questions/15407377/why-does-uitextfield-lock-up-when-setting-itself-to-delegate">Link to the source</a>
-<pre><svg viewBox="0 0 100 100">
-  <text>
-    <tspan class="line-1" textLength="100" x="0" y="1em" font-size="20">
-      The Cat
-    </tspan>
-    <tspan class="line-2" textLength="100" x="0" dy="0.9em" font-size="20" lengthAdjust="spacingAndGlyphs">
-      in the
-    </tspan>
-    <tspan class="line-3" textLength="100" x="0" dy="0.9em" font-size="35">
-      Hat
-    </tspan>
-  </text>
-</svg></pre>
+<pre>body {
+    padding-top: 3em;
+    text-transform: uppercase;
+  }
+  
+  svg {
+    display: block;
+    margin: auto;
+    width: 50%;
+  }</pre>
 </body>
 </html>
